# WebWeaver1

./: .env.example  .gitignore  Dockerfile  README.md  continue_report.py  docker-compose.yml  pyproject.toml  query.txt
artifacts/run_20251219T070524Z_b11f5df5/: events.jsonl
artifacts/run_20251219T070559Z_80f952b3/: events.jsonl  outline_judgement.json
artifacts/run_20251219T070643Z_910d677e/: events.jsonl  outline_judgement.json
artifacts/run_20251219T070730Z_c2d7f5f8/: events.jsonl  outline.md  outline_judgement.json
artifacts/run_20251219T071116Z_d197fb1d/: events.jsonl  outline_judgement.json
artifacts/run_20251219T071948Z_683e96c0/: events.jsonl  outline_judgement.json
artifacts/run_20251219T072115Z_c5611b3a/: events.jsonl  outline_judgement.json  report.md
artifacts/run_20251219T072302Z_bd1a7c35/: events.jsonl  outline.md  outline_judgement.json  report.md
artifacts/run_20251219T073036Z_568351af/: events.jsonl  outline.md  outline_judgement.json
artifacts/run_20251219T073203Z_1c1f6e01/: events.jsonl  outline.md  outline_judgement.json  report.md
docs/: 3.方法.md  4-6智能体微调sft和相关工作结论.md  PromptOutlineJudgement.md  async_and_extended_features.md  backend_enhancements.md  backend_enhancements_summary.md  backend_features_implementation.md  deepagents_migration_complete.md  enhanced_features_summary.md  judgementcriteria.md  migration_summary.md  plan.md  tools_and_extensions.md  工作流程.md  问题解决总结.md
tests/: TEST_SUMMARY.md  test_backends.py  test_citations.py  test_e2e_workflow.py  test_evidence_bank.py  test_full_workflow.py  test_quick_validation.py
(+142 files in other folders)
